src/main/java/com/translator/antlr/EropcpParser.java
// Generated from Eropcp.g4 by ANTLR 4.4
package com.translator.antlr;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.tree.*;

import java.util.List;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class EropcpParser extends Parser {
    static {
        RuntimeMetaData.checkVersion("4.4", RuntimeMetaData.VERSION);
    }

    protected static final DFA[] _decisionToDFA;
    protected static final PredictionContextCache _sharedContextCache =
            new PredictionContextCache();
    public static final int
            ROLEPLAYER = 1, BUSINESSOP = 2, COMPOBLIG = 3, RULE = 4, END = 5, WHEN = 6, THEN = 7,
            MATCHES = 8, HAPPENED = 9, CTHAPPENED = 10, BEFORE = 11, AFTER = 12, BOTYPE = 13,
            ORIGINATOR = 14, RESPONDER = 15, OUTCOME = 16, TIMESTAMP = 17, DAY = 18, DATE = 19,
            SECOND = 20, MINUTE = 21, HOUR = 22, MONTH = 23, YEAR = 24, IN = 25, NOTIN = 26, EQUALS = 27,
            NOTEQ = 28, AND = 29, OR = 30, NOT = 31, WEEKDAY = 32, MONTHID = 33, SUCCESS = 34, TECFAIL = 35,
            BIZFAIL = 36, INITFAIL = 37, BOOLEANTRUE = 38, BOOLEANFALSE = 39, ADDROP = 40, REMROP = 41,
            TERMINATE = 42, PASS = 43, RESET = 44, OBLIGS = 45, RIGHTS = 46, PROHIBS = 47, IF = 48,
            ELSE = 49, ENDIF = 50, OTHERWISE = 51, LOWER = 52, UPPER = 53, DIGIT = 54, SEMICOLON = 55,
            COLON = 56, HASH = 57, BRA = 58, KET = 59, COMMA = 60, QUOTE = 61, DQUOTE = 62, SQUAREBRA = 63,
            SQUAREKET = 64, DOT = 65, DASH = 66, BACKSLASH = 67, WS = 68;
    public static final String[] tokenNames = {
            "<INVALID>", "'roleplayer'", "'businessoperation'", "'compoblig'", "'rule'",
            "'end'", "'when'", "'then'", "'matches'", "'happened'", "'counthappened'",
            "'before'", "'after'", "'botype'", "'originator'", "'responder'", "'outcome'",
            "'timestamp'", "'day'", "'date'", "'second'", "'minute'", "'hour'", "'month'",
            "'year'", "'in'", "'!in'", "'=='", "'!='", "'&&'", "'||'", "'!'", "WEEKDAY",
            "MONTHID", "'Success'", "'TecFail'", "'BizFail'", "'InitFail'", "'true'",
            "'false'", "'+='", "'-='", "'terminate'", "'pass'", "'reset'", "'obligs'",
            "'rights'", "'prohibs'", "'if'", "'else'", "'endif'", "'Otherwise'", "LOWER",
            "UPPER", "DIGIT", "';'", "':'", "'#'", "'('", "')'", "','", "'''", "'\"'",
            "'['", "']'", "'.'", "'-'", "'\\'", "WS"
    };
    public static final int
            RULE_contractDocument = 0, RULE_declarationSection = 1, RULE_declaration = 2,
            RULE_compobligDeclaration = 3, RULE_businessOpDeclaration = 4, RULE_roleplayerDeclaration = 5,
            RULE_ruleSet = 6, RULE_singlerule = 7, RULE_rulename = 8, RULE_lhs = 9,
            RULE_eventmatch = 10, RULE_eventMcond = 11, RULE_rolePlayerConstraintIssuer = 12,
            RULE_field = 13, RULE_oper = 14, RULE_timeOperators = 15, RULE_rangeOperators = 16,
            RULE_andOR = 17, RULE_bool = 18, RULE_constraint = 19, RULE_attributeConstraint = 20,
            RULE_roleplayerConstraint = 21, RULE_outcomeConstraint = 22, RULE_timeConstraint = 23,
            RULE_timeDirectComparison = 24, RULE_timePartialComparison = 25, RULE_dayKey = 26,
            RULE_dayOfWeek = 27, RULE_dateKey = 28, RULE_dateIdent = 29, RULE_monthKey = 30,
            RULE_monthIdent = 31, RULE_yearKey = 32, RULE_yearIdent = 33, RULE_dayRange = 34,
            RULE_dateRange = 35, RULE_monthRange = 36, RULE_yearRange = 37, RULE_historicalQueryOp = 38,
            RULE_historicalQuery = 39, RULE_ropConstraint = 40, RULE_rhs = 41, RULE_rhsActionNoIfs = 42,
            RULE_rhsaction = 43, RULE_ifThen = 44, RULE_ifElse = 45, RULE_ifstatement = 46,
            RULE_condition = 47, RULE_resetaction = 48, RULE_termaction = 49, RULE_passaction = 50,
            RULE_addRemRopOperator = 51, RULE_addRemAction = 52, RULE_outcome = 53,
            RULE_ropset = 54, RULE_timeSpec = 55, RULE_absoluteTime = 56, RULE_upalphanum = 57,
            RULE_alphanum = 58, RULE_roleplayeridentifyer = 59, RULE_bopIdentifier = 60,
            RULE_genericString = 61;
    public static final String[] ruleNames = {
            "contractDocument", "declarationSection", "declaration", "compobligDeclaration",
            "businessOpDeclaration", "roleplayerDeclaration", "ruleSet", "singlerule",
            "rulename", "lhs", "eventmatch", "eventMcond", "rolePlayerConstraintIssuer",
            "field", "oper", "timeOperators", "rangeOperators", "andOR", "bool", "constraint",
            "attributeConstraint", "roleplayerConstraint", "outcomeConstraint", "timeConstraint",
            "timeDirectComparison", "timePartialComparison", "dayKey", "dayOfWeek",
            "dateKey", "dateIdent", "monthKey", "monthIdent", "yearKey", "yearIdent",
            "dayRange", "dateRange", "monthRange", "yearRange", "historicalQueryOp",
            "historicalQuery", "ropConstraint", "rhs", "rhsActionNoIfs", "rhsaction",
            "ifThen", "ifElse", "ifstatement", "condition", "resetaction", "termaction",
            "passaction", "addRemRopOperator", "addRemAction", "outcome", "ropset",
            "timeSpec", "absoluteTime", "upalphanum", "alphanum", "roleplayeridentifyer",
            "bopIdentifier", "genericString"
    };

    @Override
    public String getGrammarFileName() {
        return "Eropcp.g4";
    }

    @Override
    public String[] getTokenNames() {
        return tokenNames;
    }

    @Override
    public String[] getRuleNames() {
        return ruleNames;
    }

    @Override
    public String getSerializedATN() {
        return _serializedATN;
    }

    @Override
    public ATN getATN() {
        return _ATN;
    }

    public EropcpParser(TokenStream input) {
        super(input);
        _interp = new ParserATNSimulator(this, _ATN, _decisionToDFA, _sharedContextCache);
    }

    public static class ContractDocumentContext extends ParserRuleContext {
        public RuleSetContext ruleSet() {
            return getRuleContext(RuleSetContext.class, 0);
        }

        public TerminalNode WS(int i) {
            return getToken(EropcpParser.WS, i);
        }

        public DeclarationSectionContext declarationSection() {
            return getRuleContext(DeclarationSectionContext.class, 0);
        }

        public List<TerminalNode> WS() {
            return getTokens(EropcpParser.WS);
        }

        public ContractDocumentContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_contractDocument;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof EropcpListener) ((EropcpListener) listener).enterContractDocument(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof EropcpListener) ((EropcpListener) listener).exitContractDocument(this);
        }
    }

    public final ContractDocumentContext contractDocument() throws RecognitionException {
        ContractDocumentContext _localctx = new ContractDocumentContext(_ctx, getState());
        enterRule(_localctx, 0, RULE_contractDocument);
        int _la;
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(125);
                _la = _input.LA(1);
                if (_la == WS) {
                    {
                        setState(124);
                        match(WS);
                    }
                }

                setState(127);
                declarationSection();
                setState(129);
                _la = _input.LA(1);
                if (_la == WS) {
                    {
                        setState(128);
                        match(WS);
                    }
                }

                setState(131);
                ruleSet();
                setState(133);
                _la = _input.LA(1);
                if (_la == WS) {
                    {
                        setState(132);
                        match(WS);
                    }
                }

            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public static class DeclarationSectionContext extends ParserRuleContext {
        public TerminalNode WS(int i) {
            return getToken(EropcpParser.WS, i);
        }

        public List<TerminalNode> WS() {
            return getTokens(EropcpParser.WS);
        }

        public List<DeclarationContext> declaration() {
            return getRuleContexts(DeclarationContext.class);
        }

        public DeclarationContext declaration(int i) {
            return getRuleContext(DeclarationContext.class, i);
        }

        public DeclarationSectionContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_declarationSection;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof EropcpListener) ((EropcpListener) listener).enterDeclarationSection(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof EropcpListener) ((EropcpListener) listener).exitDeclarationSection(this);
        }
    }

    public final DeclarationSectionContext declarationSection() throws RecognitionException {
        DeclarationSectionContext _localctx = new DeclarationSectionContext(_ctx, getState());
        enterRule(_localctx, 2, RULE_declarationSection);
        try {
            int _alt;
            enterOuterAlt(_localctx, 1);
            {
                setState(135);
                declaration();
                setState(140);
                _errHandler.sync(this);
                _alt = getInterpreter().adaptivePredict(_input, 3, _ctx);
                while (_alt != 2 && _alt != org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER) {
                    if (_alt == 1) {
                        {
                            {
                                setState(136);
                                match(WS);
                                setState(137);
                                declaration();
                            }
                        }
                    }
                    setState(142);
                    _errHandler.sync(this);
                    _alt = getInterpreter().adaptivePredict(_input, 3, _ctx);
                }
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public static class DeclarationContext extends ParserRuleContext {
        public CompobligDeclarationContext compobligDeclaration() {
            return getRuleContext(CompobligDeclarationContext.class, 0);
        }

        public RoleplayerDeclarationContext roleplayerDeclaration() {
            return getRuleContext(RoleplayerDeclarationContext.class, 0);
        }

        public BusinessOpDeclarationContext businessOpDeclaration() {
            return getRuleContext(BusinessOpDeclarationContext.class, 0);
        }

        public DeclarationContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_declaration;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof EropcpListener) ((EropcpListener) listener).enterDeclaration(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof EropcpListener) ((EropcpListener) listener).exitDeclaration(this);
        }
    }

    public final DeclarationContext declaration() throws RecognitionException {
        DeclarationContext _localctx = new DeclarationContext(_ctx, getState());
        enterRule(_localctx, 4, RULE_declaration);
        try {
            setState(146);
            switch (_input.LA(1)) {
                case BUSINESSOP:
                    enterOuterAlt(_localctx, 1);
                {
                    setState(143);
                    businessOpDeclaration();
                }
                break;
                case ROLEPLAYER:
                    enterOuterAlt(_localctx, 2);
                {
                    setState(144);
                    roleplayerDeclaration();
                }
                break;
                case COMPOBLIG:
                    enterOuterAlt(_localctx, 3);
                {
                    setState(145);
                    compobligDeclaration();
                }
                break;
                default:
                    throw new NoViableAltException(this);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public static class CompobligDeclarationContext extends ParserRuleContext {
        public TerminalNode KET() {
            return getToken(EropcpParser.KET, 0);
        }

        public TerminalNode SEMICOLON() {
            return getToken(EropcpParser.SEMICOLON, 0);
        }

        public TerminalNode WS(int i) {
            return getToken(EropcpParser.WS, i);
        }

        public UpalphanumContext upalphanum(int i) {
            return getRuleContext(UpalphanumContext.class, i);
        }

        public List<TerminalNode> WS() {
            return getTokens(EropcpParser.WS);
        }

        public TerminalNode COMPOBLIG() {
            return getToken(EropcpParser.COMPOBLIG, 0);
        }

        public List<TerminalNode> COMMA() {
            return getTokens(EropcpParser.COMMA);
        }

        public List<UpalphanumContext> upalphanum() {
            return getRuleContexts(UpalphanumContext.class);
        }

        public TerminalNode BRA() {
            return getToken(EropcpParser.BRA, 0);
        }

        public TerminalNode COMMA(int i) {
            return getToken(EropcpParser.COMMA, i);
        }

        public CompobligDeclarationContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_compobligDeclaration;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof EropcpListener) ((EropcpListener) listener).enterCompobligDeclaration(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof EropcpListener) ((EropcpListener) listener).exitCompobligDeclaration(this);
        }
    }

    public final CompobligDeclarationContext compobligDeclaration() throws RecognitionException {
        CompobligDeclarationContext _localctx = new CompobligDeclarationContext(_ctx, getState());
        enterRule(_localctx, 6, RULE_compobligDeclaration);
        int _la;
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(148);
                match(COMPOBLIG);
                setState(149);
                match(WS);
                setState(150);
                upalphanum();
                setState(151);
                match(BRA);
                setState(152);
                upalphanum();
                setState(158);
                _errHandler.sync(this);
                _la = _input.LA(1);
                do {
                    {
                        {
                            setState(153);
                            match(COMMA);
                            setState(155);
                            _la = _input.LA(1);
                            if (_la == WS) {
                                {
                                    setState(154);
                                    match(WS);
                                }
                            }

                            setState(157);
                            upalphanum();
                        }
                    }
                    setState(160);
                    _errHandler.sync(this);
                    _la = _input.LA(1);
                } while (_la == COMMA);
                setState(162);
                match(KET);
                setState(163);
                match(SEMICOLON);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public static class BusinessOpDeclarationContext extends ParserRuleContext {
        public TerminalNode SEMICOLON() {
            return getToken(EropcpParser.SEMICOLON, 0);
        }

        public UpalphanumContext upalphanum(int i) {
            return getRuleContext(UpalphanumContext.class, i);
        }

        public TerminalNode WS() {
            return getToken(EropcpParser.WS, 0);
        }

        public List<TerminalNode> COMMA() {
            return getTokens(EropcpParser.COMMA);
        }

        public List<UpalphanumContext> upalphanum() {
            return getRuleContexts(UpalphanumContext.class);
        }

        public TerminalNode BUSINESSOP() {
            return getToken(EropcpParser.BUSINESSOP, 0);
        }

        public TerminalNode COMMA(int i) {
            return getToken(EropcpParser.COMMA, i);
        }

        public BusinessOpDeclarationContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_businessOpDeclaration;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof EropcpListener) ((EropcpListener) listener).enterBusinessOpDeclaration(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof EropcpListener) ((EropcpListener) listener).exitBusinessOpDeclaration(this);
        }
    }

    public final BusinessOpDeclarationContext businessOpDeclaration() throws RecognitionException {
        BusinessOpDeclarationContext _localctx = new BusinessOpDeclarationContext(_ctx, getState());
        enterRule(_localctx, 8, RULE_businessOpDeclaration);
        int _la;
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(165);
                match(BUSINESSOP);
                setState(166);
                match(WS);
                setState(167);
                upalphanum();
                setState(172);
                _errHandler.sync(this);
                _la = _input.LA(1);
                while (_la == COMMA) {
                    {
                        {
                            setState(168);
                            match(COMMA);
                            setState(169);
                            upalphanum();
                        }
                    }
                    setState(174);
                    _errHandler.sync(this);
                    _la = _input.LA(1);
                }
                setState(175);
                match(SEMICOLON);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public static class RoleplayerDeclarationContext extends ParserRuleContext {
        public TerminalNode ROLEPLAYER() {
            return getToken(EropcpParser.ROLEPLAYER, 0);
        }

        public TerminalNode SEMICOLON() {
            return getToken(EropcpParser.SEMICOLON, 0);
        }

        public List<AlphanumContext> alphanum() {
            return getRuleContexts(AlphanumContext.class);
        }

        public TerminalNode WS() {
            return getToken(EropcpParser.WS, 0);
        }

        public List<TerminalNode> COMMA() {
            return getTokens(EropcpParser.COMMA);
        }

        public AlphanumContext alphanum(int i) {
            return getRuleContext(AlphanumContext.class, i);
        }

        public TerminalNode COMMA(int i) {
            return getToken(EropcpParser.COMMA, i);
        }

        public RoleplayerDeclarationContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_roleplayerDeclaration;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof EropcpListener) ((EropcpListener) listener).enterRoleplayerDeclaration(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof EropcpListener) ((EropcpListener) listener).exitRoleplayerDeclaration(this);
        }
    }

    public final RoleplayerDeclarationContext roleplayerDeclaration() throws RecognitionException {
        RoleplayerDeclarationContext _localctx = new RoleplayerDeclarationContext(_ctx, getState());
        enterRule(_localctx, 10, RULE_roleplayerDeclaration);
        int _la;
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(177);
                match(ROLEPLAYER);
                setState(178);
                match(WS);
                setState(179);
                alphanum();
                setState(184);
                _errHandler.sync(this);
                _la = _input.LA(1);
                while (_la == COMMA) {
                    {
                        {
                            setState(180);
                            match(COMMA);
                            setState(181);
                            alphanum();
                        }
                    }
                    setState(186);
                    _errHandler.sync(this);
                    _la = _input.LA(1);
                }
                setState(187);
                match(SEMICOLON);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public static class RuleSetContext extends ParserRuleContext {
        public TerminalNode WS(int i) {
            return getToken(EropcpParser.WS, i);
        }

        public SingleruleContext singlerule(int i) {
            return getRuleContext(SingleruleContext.class, i);
        }

        public List<TerminalNode> WS() {
            return getTokens(EropcpParser.WS);
        }

        public List<SingleruleContext> singlerule() {
            return getRuleContexts(SingleruleContext.class);
        }

        public RuleSetContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_ruleSet;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof EropcpListener) ((EropcpListener) listener).enterRuleSet(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof EropcpListener) ((EropcpListener) listener).exitRuleSet(this);
        }
    }

    public final RuleSetContext ruleSet() throws RecognitionException {
        RuleSetContext _localctx = new RuleSetContext(_ctx, getState());
        enterRule(_localctx, 12, RULE_ruleSet);
        try {
            int _alt;
            enterOuterAlt(_localctx, 1);
            {
                setState(189);
                singlerule();
                setState(194);
                _errHandler.sync(this);
                _alt = getInterpreter().adaptivePredict(_input, 9, _ctx);
                while (_alt != 2 && _alt != org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER) {
                    if (_alt == 1) {
                        {
                            {
                                setState(190);
                                match(WS);
                                setState(191);
                                singlerule();
                            }
                        }
                    }
                    setState(196);
                    _errHandler.sync(this);
                    _alt = getInterpreter().adaptivePredict(_input, 9, _ctx);
                }
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public static class SingleruleContext extends ParserRuleContext {
        public TerminalNode RULE() {
            return getToken(EropcpParser.RULE, 0);
        }

        public TerminalNode WS(int i) {
            return getToken(EropcpParser.WS, i);
        }

        public List<TerminalNode> WS() {
            return getTokens(EropcpParser.WS);
        }

        public RulenameContext rulename() {
            return getRuleContext(RulenameContext.class, 0);
        }

        public TerminalNode THEN() {
            return getToken(EropcpParser.THEN, 0);
        }

        public TerminalNode WHEN() {
            return getToken(EropcpParser.WHEN, 0);
        }

        public RhsContext rhs() {
            return getRuleContext(RhsContext.class, 0);
        }

        public TerminalNode END() {
            return getToken(EropcpParser.END, 0);
        }

        public LhsContext lhs() {
            return getRuleContext(LhsContext.class, 0);
        }

        public SingleruleContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_singlerule;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof EropcpListener) ((EropcpListener) listener).enterSinglerule(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof EropcpListener) ((EropcpListener) listener).exitSinglerule(this);
        }
    }

    public final SingleruleContext singlerule() throws RecognitionException {
        SingleruleContext _localctx = new SingleruleContext(_ctx, getState());
        enterRule(_localctx, 14, RULE_singlerule);
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(197);
                match(RULE);
                setState(198);
                match(WS);
                setState(199);
                rulename();
                setState(200);
                match(WS);
                setState(201);
                match(WHEN);
                setState(202);
                match(WS);
                setState(203);
                lhs();
                setState(204);
                match(WS);
                setState(205);
                match(THEN);
                setState(206);
                match(WS);
                setState(207);
                rhs();
                setState(208);
                match(WS);
                setState(209);
                match(END);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public static class RulenameContext extends ParserRuleContext {
        public UpalphanumContext upalphanum() {
            return getRuleContext(UpalphanumContext.class, 0);
        }

        public RulenameContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_rulename;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof EropcpListener) ((EropcpListener) listener).enterRulename(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof EropcpListener) ((EropcpListener) listener).exitRulename(this);
        }
    }

    public final RulenameContext rulename() throws RecognitionException {
        RulenameContext _localctx = new RulenameContext(_ctx, getState());
        enterRule(_localctx, 16, RULE_rulename);
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(211);
                match(DQUOTE);
                setState(212);
                upalphanum();
                setState(213);
                match(DQUOTE);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
